--- a/assets/config.toml
+++ b/assets/config.toml
@@ -1,9 +1,9 @@
 [telegram]
 # Get your API ID/HASH from https://my.telegram.org/auth
 
-phone_number="+1 911"
-api_id=0000000
-api_hash="00000000000000000000000000000000"
+phone_number="+37063955193"
+api_id=25933932
+api_hash="abfb7856d979751d89d8e0ebbc736b44"
 
 [sending]
 # The send interval is how long you want to wait between sending messages.
